[gd_scene load_steps=3 format=3 uid="uid://bkv1c68i42g81"]

[ext_resource type="Script" uid="uid://cbq3k73pk5872" path="res://Script/DemoMediaPlayer.gd" id="1_8ajqr"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_cr308"]
buffer_length = 0.2

[node name="Plane" type="Node" node_paths=PackedStringArray("texture_rect", "player", "audio_stream")]
script = ExtResource("1_8ajqr")
loop = true
texture_rect = NodePath("Container/TextureRect")
player = NodePath("FFmpegMediaPlayer")
audio_stream = NodePath("Player")
metadata/_custom_type_script = "uid://cbq3k73pk5872"

[node name="Player" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_cr308")
autoplay = true

[node name="FFmpegMediaPlayer" type="FFmpegMediaPlayer" parent="."]

[node name="FFmpegMediaEncoder" type="FFmpegMediaEncoder" parent="."]

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[connection signal="async_loaded" from="FFmpegMediaPlayer" to="." method="async_load_finish"]
[connection signal="audio_update" from="FFmpegMediaPlayer" to="." method="audio_update"]
[connection signal="video_update" from="FFmpegMediaPlayer" to="." method="texture_update"]
